--- a/views/index.html
+++ b/views/index.html
@@ -21,10 +21,9 @@
         </div>
         <div id = "nav-center">
             <a><img src = "../public/img/cross.png" id = "cross" onclick = "closeNav()"></a>
-            <a href = "#" class = "link">Mon espace</a>
             <a href = "#" class = "link">Evaluation</a>
             <a href = "#" class = "link">Ressources</a>
-            <a href = "#" class = "link">Nous contacter</a>
+            <a href = "#" class = "link">Contact</a>
         </div>
         <div id="nav-right">
             <a id = "register" href = "#">Inscription</a>                        <!-- Redirect to login and there will be a small link to register -->
