--- a/views/login.html
+++ b/views/login.html
@@ -44,7 +44,7 @@
                 <div class = "row-input">
                     <input id = "password" type = "password"><img id = "eye" class = "button" src = "../public/img/closed-eye.png" onclick = "showWrittenPassword()">
                 </div>
-                <div class = "button" onclick = "checkUserConnect()">Se connecter</div>
+                <div class = "button" onclick = "checkUserConnect()">Se connecter</div> <!-- Function to link with backend -->
             </form>
             <div class = "center-right"><a href = "register.html">Pas de compte ?</a></div>
         </div>
