--- a/views/register.html
+++ b/views/register.html
@@ -52,7 +52,7 @@
                 <div class = "row-input">
                     <input id = "repeat-password" type = "password">
                 </div>
-                <div class = "button" onclick = "checkAddUser()">S'inscrire</div>
+                <div class = "button" onclick = "checkAddUser()">S'inscrire</div> <!-- Function to link with backend -->
             </form>
             <div class = "center-right"><a href = "login.html">Vous avez déjà un compte ?</a></div>
         </div>
