added help for back

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,7 +205,7 @@ h1{
 }
 
 /**************************************************************************************************/
-/* LOGIN PAGE */
+/* LOGIN & REGISTER PAGE */
 #login-main{
     height:50vh;
     align-items: center;
