--- a/views/login.html
+++ b/views/login.html
@@ -52,5 +52,6 @@
 
 
     <script src = "../public/js/animations.js"></script>
+    <script src = "../public/js/connect.js"></script>
 </body>
 </html>
