--- a/views/register.html
+++ b/views/register.html
@@ -60,5 +60,6 @@
 
 
     <script src = "../public/js/animations.js"></script>
+    <script src = "../public/js/register.js"></script>
 </body>
 </html>
