--- a/views/index.html
+++ b/views/index.html
@@ -1,55 +1,22 @@
 <!DOCTYPE html>
-<html lang = "en">
-
+<html lang="en">
 <head>
-    <link href="../public/css/style.css" rel="stylesheet">
-    <title>Projet JS</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <title>Accueil</title>
+    <link href="/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/styles_personalises/headers.css" rel="stylesheet">
 </head>
-
-
 <body>
-    <nav id = "nav">
-        <div id="nav-left">
-            <img id = "hamburger" src = "../public/img/hamburger.png" onclick = "openNav()">
-            <img id = "logo" src = "../public/img/logo.png" >
-        </div>
-        <div id = "nav-center">
-            <a><img src = "../public/img/cross.png" id = "cross" onclick = "closeNav()"></a>
-            <a href = "#" class = "link">Evaluation</a>
-            <a href = "#" class = "link">Ressources</a>
-            <a href = "#" class = "link">Contact</a>
-        </div>
-        <div id="nav-right">
-            <a id = "register" href = "#">Inscription</a>                        <!-- Redirect to login and there will be a small link to register -->
-            <a id = "login" href = "#">Connexion</a>                             <!-- Redirect to login and there will be a small link to register -->
-            <a href = "#"><img id = "log" src = "../public/img/log.png"></a> <!-- Redirect to login / register page if not registered -->
-        </div>
-    </nav>
-    <div id = "main" class = "wrapper">
-        <div id = "welcome" class = "wrapper">
-            <img src = "../public/img/logo.png" id = "logo-main">
-            <span class = "line" id = "welcome-line"></span>
-            <h1>Bienvenue sur notre plateforme</h1>
-            <span class = "line" id = "welcome-line"></span>
-            <h2 class = "welcome-text1">Consultez et suivez l'évolution de votre condition physique à tout instant.</h2>
-            <p class = "welcome-text2">Faites vos premiers pas et laissez-vous guider par notre intelligence artificielle qui proposera un programme adapté après une première évaluation.</p>
+    
+    <main>
+        <%- include("header.html", {utilisateur:utilisateur}) %>
+    </main>
 
-            <a href = "#" id = "get-started">Commençons !</a> <!-- Redirect to login / register page -->
-        </div>
-        <span class = "line"></span>
-        <div id = "preview1" class = wrapper>
-            <img src = "../public/img/preview1.png">
-            <h2>Un service personnalisé et adapatatif à vos besoins</h2>
-        </div>
-    </div>
+    <%- include("footer.html") %>
 
+    <script src="/assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src = "../public/js/animations.js"></script>
 </body>
 </html>
