--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
     </div>
     <div id = "nav-center">
         <a><img src = "img/cross.png" id = "cross" onclick = "closeNav()"></a>
-        <a href = "/index" class = "link">Accueil</a>
+        <a href = "/" class = "link">Accueil</a>
         <a href = "#" class = "link">Evaluation</a>
         <a href = "#" class = "link">Ressources</a>
         <a href = "#" class = "link">Contact</a>
