--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -7,7 +7,7 @@
 
 
 <body>
-    <%-include("../partials/navbar.ejs"); %>
+    <%-include("../partials/navbar.ejs",{utilisateur:utilisateur}); %>
     <div id = "register-main" class = "wrapper">
         <h1>Inscription</h1>
         <div id = "login-wrapper">
