--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,5 @@
 <nav id = "nav">
+    
     <div id="nav-left">
         <img id = "hamburger" src = "img/hamburger.png" onclick = "openNav()">
         <img id = "logo" src = "img/logo.png" >
@@ -13,6 +14,10 @@
     <div id="nav-right">
         <a id = "register" href = "/register">Inscription</a>                        <!-- Redirect to login and there will be a small link to register -->
         <a id = "login" href = "/login">Connexion</a>                             <!-- Redirect to login and there will be a small link to register -->
-        <a href = "/login"><img id = "log" src = "img/log.png"></a> <!-- Redirect to login / register page if not registered -->
+        <% if(utilisateur){ %>
+        <a href = "/login"><img id = "log" src = "img/log.png"></a> <!-- Redirect to Profile page if connected -->
+        <% } else { %>
+        <a href = "/register"><img id = "log" src = "img/log.png"></a> <!-- Redirect to login / register page if not registered -->
+        <% } %>
     </div>
 </nav>
