--- a/views/pages/header.html
+++ b/views/pages/header.html
@@ -25,7 +25,7 @@
               <form action="/deconnexion" method="post"><button class="btn" type="submit">Déconnexion</button></form>
             </li>
             <% } else { %>
-              <a class="btn" href="/connexion">Connexion</a>
+              <a class="btn" href="/login">Connexion</a>
             <% } %>
           </ul>
         </div>
