--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
 
 
 <body>
-    <%-include("../partials/navbar.ejs"),{utilisateur:utilisateur}; %>
+    <%-include("../partials/navbar"); %>
     <div id = "main" class = "wrapper">
         <div id = "welcome" class = "wrapper">
             <img src = "img/logo.png" id = "logo-main">
