--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,20 +1,18 @@
-<nav id = "nav">
-    
+<nav id="nav">
+
     <div id="nav-left">
-        <img id = "hamburger" src = "img/hamburger.png" onclick = "openNav()">
-        <img id = "logo" src = "img/logo.png" >
+        <img id="hamburger" src="img/whamburger.png" onclick="openNav()">
+        <img id="logo" src="img/logo.png">
     </div>
-    <div id = "nav-center">
-        <a><img src = "img/cross.png" id = "cross" onclick = "closeNav()"></a>
-        <a href = "/" class = "link">Accueil</a>
-        <a href = "#" class = "link">Evaluation</a>
-        <a href = "#" class = "link">Ressources</a>
-        <a href = "#" class = "link">Contact</a>
+    <div id="nav-center">
+        <a><img src="img/cross.png" id="cross" onclick="closeNav()"></a>
+        <a href="/" class="link">Accueil</a>
+        <a href="/informations" class="link">Informations</a>
+        <a href="/register" class="link">Inscription</a>
+        <a href="/contact" class="link">Contact</a>
     </div>
     <div id="nav-right">
-        <a id = "register" href = "/register">Inscription</a>                        <!-- Redirect to login and there will be a small link to register -->
-        <a id = "login" href = "/login">Connexion</a>                             <!-- Redirect to login and there will be a small link to register -->
-        <a href = "/login"><img id = "log" src = "img/log.png"></a> <!-- Redirect to Profile page if connected -->
-        <a href = "/register"><img id = "log" src = "img/log.png"></a> <!-- Redirect to login / register page if not registered -->
+        <a id="login" href="/login">Connexion</a>               <!-- Redirect to login and there will be a small link to register -->
+        <a href="/login"><img id="log" src="img/wlog.png"></a> <!-- Redirect to Profile page if connected -->
     </div>
 </nav>
