--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,19 @@
 :root{
-    --main-bg-color:#F4EDEA;
-    --main-bg-color-bis:rgb(200, 228, 217);
-    --bg-dark-color:#1a344e;
-    --bg-med-color:#0F4C5C;
-    --nav-bg-color:#C5D8D1;
-    --nav-appear-color:#99c7bb;
-    --nav-hover-color:#80b8b5;
+    --main-bg-color:#1f1f1f;
+    --main-bg-color-bis:rgb(51, 51, 51);
+    --bg-dark-color:#f0b434;
+    --bg-med-color:#0a2f38;
+    --nav-bg-color:#e9d14d;
+    --nav-appear-color:#ecc135;
+    --nav-hover-color:#d6a232;
 
-    --light-text-color:#fff4e0;
-    --dark-text-color:#10273d;
-    --highlight-green:#3f8f20;
-    --highlight-blue:#237ea8;;
-    --button-color:#80b8b5;
+    --light-text-color:#f1f1f1;
+    --dark-text-color:#dddddd;
+    --highlight-yellow:#e9d043;
+    --highlight-blue:#25ceec;;
+    --highlight-orange:#d46318;
+    --button-color:#dab825;
+    --button-color-black:#070707;
     --button-color-dark:#679daa;
 }
 
@@ -21,7 +23,7 @@
     margin:0;
     background:var(--main-bg-color);
     font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
+    overflow-x:hidden;
 }
 a{
     text-decoration: none;
@@ -45,7 +47,7 @@ nav{
 #hamburger, #cross{
     display:none;
 }
-#hamburger:hover, #cross:hover, #get-started:hover{
+#hamburger:hover, #cross:hover, #get-started:hover, #log{
     cursor:pointer;
 }
 #log{
@@ -82,35 +84,62 @@ nav{
 /**********************************************************************************************/
 /* INDEX */
 
-#logo-welcome{
+.main-page-image{
     display:flex;
     align-items: center;
     justify-content: space-around;
 
+    
     width:100%;
+    height:100%;
+    background-size: cover;
+    background-repeat:no-repeat;
 }
-#welcome{
-    width:100%;
-    height:80vh;
-    justify-content: space-around;
-}
-#welcome >*{
-    margin: 1vh 0 1vh 0;
+.parent-image{
     overflow-y: hidden;
 }
-#logo-main{
-    max-height: 20vh;
-    max-width: 20vh;
+#main-img1{
+    background-image: url("../img/welcome-image.jpg");
+    animation:zooming 6s infinite;
+    filter:blur(1px);
+}
+#preview-parent0{
+    width:100%;
+    height:9em;
+}
+#main-img2{
+    background-image: url("../img/welcome-image3.jpg");
+    filter:blur(1px);
+    animation:zooming2 6s infinite;
+}
+#preview-parent1{
+    width:60%;
+    height:13em;
+}
+#preview-text1{
+    font-size:1em;
+    width:30%;
+    height:12vh;
+}
+
+
+#welcome{
+    width:100%;
+    padding:0 0 5vh 0;
+    justify-content: space-around;
+}
+#welcome >*:not(.parent-image, #welcome-line){
+    margin: 1vh 0 1vh 0;
+    overflow-y: hidden;
 }
 h1{
     width:100%; 
     text-align: center;
-    text-decoration: underline;
     font-size:4.5vh;
-    padding:2vh 0 2vh 0;
+    padding:1vh 0 1vh 0;
     position: relative;
     
-    background-color: #ecdccd;
+    color:var(--light-text-color);
     animation:welcome-text1 1s forwards;
 }
 .welcome-text1{
@@ -118,29 +147,33 @@ h1{
     filter:opacity(0);
     position:relative;
     animation: welcome-text2 1s 2s forwards;
+    color: var(--dark-text-color);
 }
 .welcome-text2{
     padding:1vh;
     filter:opacity(0);
     position:relative;
     animation: welcome-text2 1s 3s forwards;
+    color: var(--dark-text-color);
 }
 #welcome-line{
     width:0;
     height:0.5vh;
     transform: skewX(20deg);
     margin:0;
-    background: var(--bg-dark-color);
+    background: var(--nav-appear-color);
     animation:welcome-line 1s 1s forwards;
 }
 #get-started{
     color:var(--light-text-color);
     padding:2vh;
-    border-radius: 2em;
-    background:var(--button-color);
+    border-radius: 1em;
+    background:var(--button-color-black);
     transition:0.1s;
     font-weight: bold;
-    box-shadow: var(--button-color-dark) 0 4px;
+}
+#get-started:hover{
+    border-radius:0;
 }
 #get-started:active{
     color:#1d5e28;
@@ -148,7 +181,7 @@ h1{
     transform:scale(0.95);
 }
 .wrapper{
-    margin:1vh 0 1vh 0;
+    margin:0;
     width:100%;
     display:flex;
     flex-direction: column;
@@ -158,22 +191,37 @@ h1{
     color:var(--light-text-color);
     background:var(--bg-med-color);
 }
+#preview1 .highlight-yellow{
+    background:var(--bg-med-color);
+}
+
 #preview1{
     display:flex;
     flex-direction:row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     height:40vh;
+    width:100%;
 }
-#preview2, #preview2>*{
+#preview2{
+    display:flex;
+    flex-direction: column;
+    height:50vh;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#preview2, #preview2>*:not(.button-dark){
     color:var(--light-text-color);
     background-color: var(--bg-dark-color);
 }
 .underlined{
     text-decoration: underline;
 }
-.highlight-green{
-    color:var(--highlight-green);
+.highlight-yellow{
+    color:var(--highlight-yellow);
+}
+.highlight-orange{
+    color:var(--highlight-orange);
 }
 .highlight-blue{
     color:var(--highlight-blue);
@@ -203,7 +251,44 @@ h1{
         filter:opacity(1);
     }
 }
-
+@keyframes zooming{
+    0%{
+        transform:scale(1.1);
+        filter:blur(2px);
+    }
+    50%{
+        transform:scale(1.5);
+        filter:blur(0);
+        background-position: 5vh 2vh;
+    }
+    80%{
+        transform:scale(1.2);
+        filter:blur(1px);
+        background-position: -3vh 1vh;
+    }
+    100%{
+        transform:scale(1.1);
+        filter:blur(2px);
+    }
+}
+@keyframes zooming2{
+    0%{
+        transform:scale(1);
+        background-position: 0 0;
+    }
+    40%{
+        background-position: -2vh 0;
+        transform:scale(1.3);
+    }
+    70%{
+        background-position: -0vh -1vh;
+        transform:scale(1.1);
+    }
+    100%{
+        transform:scale(1);
+        background-position: 0 0;
+    }
+}
 /**************************************************************************************************/
 /* LOGIN & REGISTER PAGE */
 #login-main{
@@ -237,12 +322,14 @@ h1{
     background: none;
 }
 .row-input input{
-    padding:0.7vh 0 0.7vh 0;
+    padding:0.7vh 0 0.7vh 0.3vh;
+    color:var(--light-text-color);
+    width:60%;
 }
 #login-form .row-input {
     margin-bottom:2vh;
 }
-#login-form >*:not(.button){
+#login-form >*:not(.button-yellow){
     background:var(--main-bg-color-bis);
 }
 .row-input{
@@ -251,31 +338,44 @@ h1{
     justify-content:center;
     width:100%;
 }
+label{
+    color:var(--dark-text-color);
+}
 #eye{
-    width:7%;
+    width:20px;
     height:inherit;
     padding:0.5vh;
     border-radius: 3vh;
-    position: absolute;
-    left:80%;
+    position:absolute;
+    right:10%;
 }
 #see-password{
     position:relative;
     top:0vh;
     right:1vh;
 }
-.button{
+.button-yellow,.button-dark{
     margin: 2vh 0 2vh 0;
     padding:1.5vh 3vh;
-    border-radius:3vh;
+    border-radius:1vh;
+    transition: 0.1s;
+}
+.button-yellow{
     background:var(--button-color);
-    transition: 0.1s
+    color:var(--light-text-color);
 }
-.button:hover{
+.button-dark{
+    color:var(--light-text-color);
+    background:var(--button-color-black);
+}
+.button-yellow:hover{
+    background:var(--nav-hover-color);
+}
+.button-yellow:hover,.button-dark:hover{
     cursor: pointer;
-    background:var(--button-color-dark);
+    border-radius:0;
 }
-.button:active{
+.button-yellow:active,.button-dark:active{
     transform: scale(0.95);
 }
 #login-form{
@@ -286,12 +386,20 @@ h1{
     display:flex;
     flex-direction: column;
     align-items: center;
-    border:solid 1px var(--button-color);
-    border-radius: 2vh;
+    border:solid 1px var(--main-bg-color);
+    border-radius: 1vh;
 }
 
 @media only screen and (max-width: 1000px){
+    nav{
+        position:sticky;
+        z-index:3;
+    }
+    #appearence-wrapper{
+        display:block;
+    }
     #nav-center{
+        position:sticky;
         width:0;
         flex-direction: column;
         align-items: flex-start;
@@ -330,12 +438,20 @@ h1{
         justify-content: center;
     }
     #hamburger, #log{
-        background: var(--button-color);
+        background: var(--button-color-black);
         height:4vh;
         width:4vh;
         display:block;
         padding:1vh;
         border-radius: 1em;
+
+        transition:0.1s;
+    }
+    #login{
+        margin-right:1vh;
+    }
+    #hamburger:hover, #log:hover{
+        border-radius:0;
     }
     #cross{
         background: var(--nav-appear-color);
@@ -346,7 +462,7 @@ h1{
         display:block;
         padding:1vh;
     }
-    #logo, #register,#login{
+    #logo, #register{
         display:none;
     }
 }
