--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,9 +18,9 @@
                 </div>                
                 <label for = "password">Mot de passe</label>
                 <div class = "row-input">
-                    <input id = "password" type = "password"><img id = "eye" class = "button" src = "img/closed-eye.png" onclick = "showWrittenPassword()">
+                    <input id = "password" type = "password"><img id = "eye" class = "button-yellow" src = "img/closed-eye.png" onclick = "showWrittenPassword()">
                 </div>
-                <div class = "button" onclick = "checkUserConnect()">Se connecter</div> <!-- Function to link with backend -->
+                <div class = "button-yellow" onclick = "checkUserConnect()">Se connecter</div> <!-- Function to link with backend -->
             </form>
             <div class = "center-right"><a href = "/register">Pas de compte ?</a></div>
         </div>
@@ -29,5 +29,6 @@
 
     <script src = "js/animations.js"></script>
     <script src = "js/connect.js"></script>
+    <script src = "js/cookieAPI.js"></script>
 </body>
 </html>
