--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
 
 
 <body>
-    <%-include("../partials/navbar"); %>
+    <%-include("../partials/navbar", {utilisateur:utilisateur}); %>
     <div id = "main" class = "wrapper">
         <div id = "welcome" class = "wrapper">
             <div class = "parent-image" id = "preview-parent0">
@@ -35,6 +35,5 @@
 
     <%-include("../partials/footer"); %>
     <script src = "js/animations.js"></script>
-    <script src = "js/cookieAPI.js"></script>
 </body>
 </html>
