--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@
     background:var(--main-bg-color);
     font-family: 'Montserrat', sans-serif;
     overflow-x:hidden;
+    overflow-y: hidden;
 }
 a{
     text-decoration: none;
@@ -141,6 +142,7 @@ h1{
     
     color:var(--light-text-color);
     animation:welcome-text1 1s forwards;
+    overflow-y: hidden;
 }
 .welcome-text1{
     padding:1vh;
@@ -449,6 +451,7 @@ label{
     }
     #login{
         margin-right:1vh;
+        background:var(--nav-bg-color);
     }
     #hamburger:hover, #log:hover{
         border-radius:0;
