--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -6,7 +6,11 @@
 </head>
 
 <body>
-    <%-include("../partials/navbar.ejs"); %>
+    <%if(utilisateur){%>
+        <%-include("../partials/navbar-connected.ejs"); %>
+    <%}else {%>
+        <%-include("../partials/navbar.ejs"); %>
+    <%}%>
     <h1>Désolé, la page est en construction !</h1>
 
     <script src ="js/animations.js"></script>
