--- a/views/pages/logiin.html
+++ b/views/pages/logiin.html
@@ -3,21 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Inscription</title>
+    <title>Connexion</title>
     <link href="/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/styles_personalises/signin.css" rel="stylesheet">
   </head>
   <body class="text-center">
     
 <main class="form-signin w-100 m-auto">
-  <form action="/inscription" method="post">
+  <form action="/login" method="post">
     <img class="mb-4" src="/images/drcmind.png" alt="" width="72" height="72">
-    <h1 class="h3 mb-3 fw-normal">Inscrivez-vous</h1>
+    <h1 class="h3 mb-3 fw-normal">Connectez-vous s'il vous plait !</h1>
 
-    <div class="form-floating">
-      <input type="text" name="nom" class="form-control" id="floatingInput" placeholder="Votre nom">
-      <label for="floatingPassword">Noms</label>
-    </div>
     <div class="form-floating">
       <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
       <label for="floatingInput">Adresse e-mail</label>
@@ -27,11 +23,13 @@
       <label for="floatingPassword">Mot de passe</label>
     </div>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Inscripion</button>
-    <p><a href="/connexion">Connectez-vous </a> Si vous avez déjà un compte</p>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Connexion</button>
+    <p><a href="/register">Inscrivez-vous </a> Si vous n'avez pas de compte</p>
     <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
   </form>
 </main>
 
+
+    
   </body>
 </html>
