--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,19 @@
 :root{
-    --main-bg-color:#F4EDEA;
-    --bg-dark-color:#1a344e;
-    --bg-med-color:#0F4C5C;
-    --nav-bg-color:#C5D8D1;
-    --nav-appear-color:#99c7bb;
-    --nav-hover-color:#80b8b5;
+    --main-bg-color:#1f1f1f;
+    --main-bg-color-bis:rgb(51, 51, 51);
+    --bg-dark-color:#f0b434;
+    --bg-med-color:#0a2f38;
+    --nav-bg-color:#e9d14d;
+    --nav-appear-color:#ecc135;
+    --nav-hover-color:#d6a232;
 
-    --light-text-color:#fff4e0;
-    --dark-text-color:#10273d;
-    --button-color:#80b8b5;
+    --light-text-color:#f1f1f1;
+    --dark-text-color:#dddddd;
+    --highlight-yellow:#e9d043;
+    --highlight-blue:#25ceec;;
+    --highlight-orange:#d46318;
+    --button-color:#dab825;
+    --button-color-black:#070707;
     --button-color-dark:#679daa;
 }
 
@@ -18,6 +23,8 @@
     margin:0;
     background:var(--main-bg-color);
     font-family: 'Montserrat', sans-serif;
+    overflow-x:hidden;
+    overflow-y: hidden;
 }
 a{
     text-decoration: none;
@@ -124,10 +131,7 @@ nav{
 }
 #welcome >*:not(.parent-image, #welcome-line){
     margin: 1vh 0 1vh 0;
-}
-#logo-main{
-    max-height: 20vh;
-    max-width: 20vh;
+    overflow-y: hidden;
 }
 h1{
     width:100%; 
@@ -136,7 +140,7 @@ h1{
     padding:1vh 0 1vh 0;
     position: relative;
     
-
+    color:var(--light-text-color);
     animation:welcome-text1 1s forwards;
     overflow-y: hidden;
 }
@@ -188,12 +192,41 @@ h1{
 #preview1, #preview1>*{
     color:var(--light-text-color);
     background:var(--bg-med-color);
-    height:30vh;
+}
+#preview1 .highlight-yellow{
+    background:var(--bg-med-color);
+}
+
+#preview1{
+    display:flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content: space-evenly;
+    height:40vh;
+    width:100%;
+}
+#preview2{
+    display:flex;
+    flex-direction: column;
+    height:50vh;
+    align-items: center;
+    justify-content: space-evenly;
 }
 #preview2, #preview2>*:not(.button-dark){
     color:var(--light-text-color);
     background-color: var(--bg-dark-color);
-    height:30vh;
+}
+.underlined{
+    text-decoration: underline;
+}
+.highlight-yellow{
+    color:var(--highlight-yellow);
+}
+.highlight-orange{
+    color:var(--highlight-orange);
+}
+.highlight-blue{
+    color:var(--highlight-blue);
 }
 
 @keyframes welcome-line{
@@ -220,10 +253,152 @@ h1{
         filter:opacity(1);
     }
 }
+@keyframes zooming{
+    0%{
+        transform:scale(1.1);
+        filter:blur(2px);
+    }
+    50%{
+        transform:scale(1.5);
+        filter:blur(0);
+        background-position: 5vh 2vh;
+    }
+    80%{
+        transform:scale(1.2);
+        filter:blur(1px);
+        background-position: -3vh 1vh;
+    }
+    100%{
+        transform:scale(1.1);
+        filter:blur(2px);
+    }
+}
+@keyframes zooming2{
+    0%{
+        transform:scale(1);
+        background-position: 0 0;
+    }
+    40%{
+        background-position: -2vh 0;
+        transform:scale(1.3);
+    }
+    70%{
+        background-position: -0vh -1vh;
+        transform:scale(1.1);
+    }
+    100%{
+        transform:scale(1);
+        background-position: 0 0;
+    }
+}
+/**************************************************************************************************/
+/* LOGIN & REGISTER PAGE */
+#login-main{
+    height:50vh;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#register-main{
+    height:80vh;
+}
+#login-main *{
+    overflow-y:hidden ;
+}
+#login-wrapper{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    
+    width:90%;
+    padding:2vh;
+}
+.center-right{
+    width:100%;
+    display:flex;
+    justify-content: flex-end;
+}
+.center-right a{
+    color:var(--dark-text-color);
+    font-size: 2vh;
+    background: none;
+}
+.row-input input{
+    padding:0.7vh 0 0.7vh 0.3vh;
+    color:var(--light-text-color);
+    width:60%;
+}
+#login-form .row-input {
+    margin-bottom:2vh;
+}
+#login-form >*:not(.button-yellow){
+    background:var(--main-bg-color-bis);
+}
+.row-input{
+    display:flex;
+    align-items: center;
+    justify-content:center;
+    width:100%;
+}
+label{
+    color:var(--dark-text-color);
+}
+#eye{
+    width:20px;
+    height:inherit;
+    padding:0.5vh;
+    border-radius: 3vh;
+    position:absolute;
+    right:10%;
+}
+#see-password{
+    position:relative;
+    top:0vh;
+    right:1vh;
+}
+.button-yellow,.button-dark{
+    margin: 2vh 0 2vh 0;
+    padding:1.5vh 3vh;
+    border-radius:1vh;
+    transition: 0.1s;
+}
+.button-yellow{
+    background:var(--button-color);
+    color:var(--light-text-color);
+}
+.button-dark{
+    color:var(--light-text-color);
+    background:var(--button-color-black);
+}
+.button-yellow:hover{
+    background:var(--nav-hover-color);
+}
+.button-yellow:hover,.button-dark:hover{
+    cursor: pointer;
+    border-radius:0;
+}
+.button-yellow:active,.button-dark:active{
+    transform: scale(0.95);
+}
+#login-form{
+    background-color: var(--main-bg-color-bis);
+    padding:2vh 0 2vh 0;
+    margin: 1vh 0 1vh 0;
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    border:solid 1px var(--main-bg-color);
+    border-radius: 1vh;
+}
+
 @media only screen and (max-width: 1000px){
     nav{
-        top:-7px;
-        justify-content:space-between;
+        position:sticky;
+        z-index:3;
+    }
+    #appearence-wrapper{
+        display:block;
     }
     #nav-center{
         position:sticky;
@@ -265,11 +440,21 @@ h1{
         justify-content: center;
     }
     #hamburger, #log{
-        background: var(--nav-bg-color);
+        background: var(--button-color-black);
         height:4vh;
         width:4vh;
         display:block;
         padding:1vh;
+        border-radius: 1em;
+
+        transition:0.1s;
+    }
+    #login{
+        margin-right:1vh;
+        background:var(--nav-bg-color);
+    }
+    #hamburger:hover, #log:hover{
+        border-radius:0;
     }
     #cross{
         background: var(--nav-appear-color);
