--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -7,12 +7,19 @@
 
 <body>
     <%if(utilisateur){%>
-        <%-include("../partials/navbar-connected.ejs"); %>
-    <%}else {%>
+        <%if(utilisateur.testDone){%>
+            <%-include("../partials/navbar-tested.ejs"); %>
+        <%}%>
+        <%if(!utilisateur.testDone){%>
+            <%-include("../partials/navbar-nottested.ejs"); %>
+        <%}%>
+        
+    <%}%>
+    <%if(!utilisateur) {%>
         <%-include("../partials/navbar.ejs"); %>
     <%}%>
+    <h1>Contact</h1>
     <h1>Désolé, la page est en construction !</h1>
-
     <script src ="js/animations.js"></script>
 </body>
 
