--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -9,7 +9,7 @@
     <%if(utilisateur){%>
         <%if(utilisateur.testDone){%>
             <%-include("../partials/navbar-tested.ejs"); %>
-            <h1>Objectifs</h1>
+            <h1>Résultats</h1>
             <h1>Désolé, la page est en construction !</h1>
         <%}%>
         <%if(!utilisateur.testDone){%>
