--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -36,7 +36,7 @@
                     <input id = "password" type = "password" name = "password"><img id = "eye" class = "button-yellow" src = "img/closed-eye.png" onclick = "showWrittenPassword()">
                 </div>
                 <label for = "repeat-password">Répétez le mot de passe *</label>
-                <button class = "button-yellow" onclick = "checkAddUser()" type = "submit">S'inscrire</button> <!-- Function to link with backend -->
+                <button class = "button-yellow" onclick = "checkAddUser()" type = "submit">S'inscrire</button>
             </form>
             <div class = "center-right"><a href = "/login">Vous avez déjà un compte ?</a></div>
         </div>
